[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipython>=8.37.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-neo4j>=0.6.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "neo4j>=5.25.0,<6.0.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pygraphviz>=1.14",
    "pymilvus>=2.6.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "zhipuai>=2.1.5.20250825",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

